--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
+    "@nuxtjs/style-resources": "^1.2.1",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
@@ -26,6 +27,8 @@
     "lint-staged": "^13.0.2",
     "nuxt": "^3.0.0",
     "prettier": "^2.7.1",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
     "typescript": "^4.7.4"
   },
   "overrides": {
