--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "^8.0.1",
     "lerna": "^5.1.4",
     "lint-staged": "^13.0.2",
+    "naive-ui": "^2.34.3",
     "nuxt": "^3.0.0",
     "prettier": "^2.7.1",
     "stylus": "^0.59.0",
