feat: package scripts prod

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "prod": "npm run build && node .output/server/index.mjs "
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.2",
